--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "url": "https://github.com/lucidogen/lucy-three/issues"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
-    "mocha": "~1.16.2"
+    "chai": "^3.2.0",
+    "mocha": "^2.3.0"
   },
   "dependencies": {
     "lucy-compose": "^0.1.1",
